--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-/* style.css */
+/* Fonts Available:
+    - Arvo
+    - Montserrat
+    - Montserrat Alternates
+    - Raleway */
+
+/* Desktop/PC Settings */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -8,18 +14,48 @@ body {
 
 .hero {
   background-color: #f5f5f5;
-  background-image: url('images/greenhouse.png');
+  background-image: url('images/greenhouseBG.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   text-align: center;
-  padding: 100px 20px;
+  padding: 30px 20px;
+}
+
+#logo-img {
+  display: block;
+  margin: 0 auto;
+	width: 150px;
+	height: 150px;
+	object-fit: cover;
+	border-radius: 50%;
+}
+
+header h1 {
+  font-family: 'Montserrat Alternates', monospace;
+  font-size: 50px;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 1px;
+
+  background-color: #78cc18;
+  display: inline-block;
+  padding: 0px 10px;
+  border-radius: 25px;
+}
+
+header p {
+  font-family: 'Arvo', monospace;
+  font-size: 13px;
+  color: white;
+  margin-top: 1px;
 }
 
 .cta {
-  padding: 15px 30px;
-  font-size: 1rem;
-  background-color: #007bff;
+  padding: 15px 60px;
+  font-family: 'Montserrat', arial;
+  font-size: 0.75rem;
+  background-color: #3c4b2e;
   color: white;
   border: none;
   border-radius: 5px;
@@ -28,17 +64,33 @@ body {
 
 .features {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
   padding: 50px 20px;
 }
 
 .feature-card {
-  flex: 1;
-  margin: 0 10px;
-  padding: 20px;
+  flex: 1 1 30%;
+  width: 30%;
+  padding: 0 20px;
+  padding-top: 5px;
   background: #ffffff;
   border: 1px solid #ddd;
+  border-radius: 20px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.feature-card h2 {
+  display: inline-block;
+  background-color: #78cc18;
+  color: white;
+  padding: 5px 15px;
   border-radius: 8px;
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: 1.5rem;
+  margin-bottom: 15px;
   text-align: center;
 }
 
@@ -65,12 +117,15 @@ footer {
   color: #fff;
 }
 
-/* Responsive adjustments */
+/* Mobile Settings */
 @media screen and (max-width: 768px) {
   .features {
     flex-direction: column;
+    justify-content: center;
   }
   .feature-card {
-    margin: 10px 0;
+    width: 90%;
+    max-width: 400px;
+    margin: 10px auto;
   }
 }
