--- a/style.css
+++ b/style.css
@@ -67,7 +67,20 @@ header p {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  padding: 50px 20px;
+  padding: 0px 20px;
+  padding-bottom: 20px;
+  flex-direction: row;
+  background-color: #e2e6cb;
+}
+
+.section-title {
+  width: 50%;
+  text-align: center;
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: 2rem;
+  margin-bottom: 1px;
+  color: #78cc18;
+  flex-basis: 100%;  
 }
 
 .feature-card {
@@ -75,7 +88,7 @@ header p {
   width: 30%;
   padding: 0 20px;
   padding-top: 5px;
-  background: #ffffff;
+  background: #f5f5f5;
   border: 1px solid #ddd;
   border-radius: 20px;
   text-align: center;
@@ -92,6 +105,19 @@ header p {
   font-size: 1.5rem;
   margin-bottom: 15px;
   text-align: center;
+}
+
+.divider-feature {
+  border: 0;
+  height: 1px;
+  background-color: #78cc18;
+  margin: 10px 0;
+}
+
+.feature-card p {
+  font-family: 'Montserrat', monospace;
+  font-size: 1rem;
+  text-align: justify;
 }
 
 .visual img {
