--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #e2e6cb;
 }
 
 .hero {
@@ -55,6 +56,7 @@ header p {
   padding: 15px 60px;
   font-family: 'Montserrat', arial;
   font-size: 0.75rem;
+  font-weight: bold;
   background-color: #3c4b2e;
   color: white;
   border: none;
@@ -93,6 +95,8 @@ header p {
   border-radius: 20px;
   text-align: center;
   box-sizing: border-box;
+
+  /*box-shadow: ;*/
 }
 
 .feature-card h2 {
@@ -120,11 +124,55 @@ header p {
   text-align: justify;
 }
 
+.visual {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 0px 20px;
+  padding-bottom: 20px;
+  flex-direction: row;
+  background-color: #e2e6cb;
+}
+
+.visual-card {
+  flex: 1 1 20%;
+  width: 20%;
+  padding: 0 0;
+  background: #f5f5f5;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  text-align: center;
+  box-sizing: border-box;
+  /*
+  background-color: #f5f5f5;
+  background-image: url('images/minimalBG.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  */
+}
+
+.visual-card h2 {
+  display: block;
+  width: 100%;
+  background-color: #78cc18;
+  color: white;
+  padding: 15px 0;
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: 1.5rem;
+  text-align: center;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  margin: 0;
+}
+
 .visual img {
   width: 100%;
-  max-width: 800px;
+  max-width: 94%;
   display: block;
   margin: 0 auto;
+  margin-bottom: 3%;
 }
 
 .info {
@@ -149,7 +197,25 @@ footer {
     flex-direction: column;
     justify-content: center;
   }
+
   .feature-card {
+    width: 90%;
+    max-width: 400px;
+    margin: 10px auto;
+  }
+
+  .section-title {
+    width: 90%;
+    max-width: 400px;
+    margin: 10px auto;
+  }
+
+  .visual {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .visual-card {
     width: 90%;
     max-width: 400px;
     margin: 10px auto;
