--- a/style.css
+++ b/style.css
@@ -95,8 +95,6 @@ header p {
   border-radius: 20px;
   text-align: center;
   box-sizing: border-box;
-
-  /*box-shadow: ;*/
 }
 
 .feature-card h2 {
@@ -136,21 +134,14 @@ header p {
 }
 
 .visual-card {
-  flex: 1 1 20%;
-  width: 20%;
+  flex: 1 1 15%;
+  width: 15%;
   padding: 0 0;
   background: #f5f5f5;
   border: 1px solid #ddd;
   border-radius: 20px;
   text-align: center;
   box-sizing: border-box;
-  /*
-  background-color: #f5f5f5;
-  background-image: url('images/minimalBG.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  */
 }
 
 .visual-card h2 {
@@ -160,37 +151,175 @@ header p {
   color: white;
   padding: 15px 0;
   font-family: 'Montserrat Alternates', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-radius: 20px 20px 0 0;
   margin: 0;
 }
 
 .visual img {
   width: 100%;
-  max-width: 94%;
+  max-width: 100%;
   display: block;
-  margin: 0 auto;
-  margin-bottom: 3%;
+  border-radius: 0 0 20px 20px;
 }
 
 .info {
-  padding: 50px 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  padding: 30px 20px;
+  flex-direction: row;
+  background-color: #e2e6cb;
+}
+
+.info-hold {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 0px 20px;
+  flex-direction: row;
+  background-color: #e2e6cb;
+}
+
+.info-img {
+  flex: 0 0 35%;
+  max-width: 35%;
+  display: flex;
+}
+
+.info-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px 0 0 20px;
+}
+
+.info-text {
+  flex: 0 0 65%;
+  width: 65%;
+  max-width: 65%;
+  background: #f5f5f5;
+  border-radius: 0 20px 20px 0;
+  text-align: center;
+}
+
+.info-text p {
+  font-family: 'Montserrat', monospace;
+  font-size: 1rem;
+  text-align: justify;
+  margin: 0 2%;
+  margin-bottom: 2%;
+}
+
+.info-text h2 {
+  display: inline-block;
+  background-color: #78cc18;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 8px;
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.divider-info {
+  border: 0;
+  height: 1px;
+  background-color: #78cc18;
+  margin: 10px auto;
+  width: 95%;
 }
 
 .cta-final {
   text-align: center;
-  padding: 70px 20px;
+  padding: 0px 20px;
+  padding-bottom: 20px;
 }
 
 footer {
-  text-align: center;
-  padding: 20px;
-  background: #333;
+  padding: 10px;
+  background: #343a40;
   color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
+.foot-left {
+  width: 20%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+.foot-logo {
+  width: 40%;
+  display: flex;
+}
+
+.foot-logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+footer h2 {
+  display: flex;
+  font-family: 'Montserrat Alternates', monospace;
+  font-size: 1.3rem;
+  color: #78cc18;
+  text-align: left;
+  align-items: center;
+  justify-content: left;
+}
+
+.foot-mid {
+  width: 80%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.foot-mid p {
+  display: flex;
+  padding: 15px 0;
+  font-family: 'Montserrat', arial;
+  font-size: 0.75rem;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+}
+
+.foot-right {
+  width: 20%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.foot-social {
+  max-width: 25%;
+  height: 60%;
+  display: flex;
+}
+
+.foot-social img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/*============================================================*/
 /* Mobile Settings */
 @media screen and (max-width: 768px) {
   .features {
@@ -219,5 +348,102 @@ footer {
     width: 90%;
     max-width: 400px;
     margin: 10px auto;
+  }
+
+  .info {
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    max-width: 400px;
+    margin: 10px auto;
+    padding: 20px 10px;
+  }
+
+  .info-img,
+  .info-text {
+    flex: 1 1 100%;
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .info-img img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+  }
+
+  .info-text {
+    flex: 0 0 100%;
+    text-align: center;
+    border-radius: 0 0 20px 20px;
+    box-sizing: border-box;
+    padding: 0 20px;
+  }
+
+  .info-text h2 {
+    text-align: center;
+  }
+
+  .cta-final {
+    padding-top: 10px;
+  }
+
+  footer {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 5px;
+  }
+
+  .foot-left {
+    width: 25%;
+    height: 80px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .foot-logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  .foot-left h2 {
+    font-size: 0.9rem;
+    margin: 0;
+  }
+
+  .foot-mid {
+    width: 50%;
+    height: 80px;
+    flex: 1 1 auto;
+    text-align: center;
+  }
+
+  .foot-mid p {
+    font-size: 50%;
+  }
+
+  .foot-right {
+    width: 25%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex: 1 1 auto;
+  }
+
+  .foot-social {
+    width: 35px;
+    height: 35px;
+  }
+
+  .foot-social img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 }
